--- a/MNIST_CNN.conx/config.json
+++ b/MNIST_CNN.conx/config.json
@@ -1,121 +1,121 @@
 {
+    "dashboard.dataset": "Test",
+    "activation": "linear",
+    "svg_max_width": 800,
+    "svg_scale": 1.0,
+    "font_size": 12,
+    "border_width": "2",
+    "border_bottom": 25,
+    "vspace": 30,
+    "dashboard.features.bank": "conv2D_1",
+    "image_pixels_per_unit": 50,
+    "arrow_width": "2",
     "config_layers": {
-        "maxpool1": {
-            "image_maxdim": null,
-            "feature": 0,
-            "visible": true,
-            "vshape": null,
-            "minmax": null,
-            "max_draw_units": 20,
+        "output": {
             "colormap": null,
-            "image_pixels_per_unit": null
-        },
-        "input": {
-            "image_maxdim": null,
-            "feature": 0,
-            "visible": true,
-            "vshape": null,
-            "minmax": null,
+            "image_pixels_per_unit": null,
             "max_draw_units": 20,
-            "colormap": "gray",
-            "image_pixels_per_unit": null
-        },
-        "conv2D_1": {
-            "image_maxdim": null,
-            "feature": 0,
-            "visible": true,
-            "vshape": null,
             "minmax": [
                 -1.0,
                 1.0
             ],
-            "max_draw_units": 20,
-            "colormap": null,
-            "image_pixels_per_unit": null
+            "image_maxdim": null,
+            "visible": true,
+            "vshape": null,
+            "feature": 0
         },
         "conv2D_2": {
-            "image_maxdim": null,
-            "feature": 0,
-            "visible": true,
-            "vshape": null,
+            "colormap": null,
+            "image_pixels_per_unit": null,
+            "max_draw_units": 20,
             "minmax": [
                 -1.0,
                 1.0
             ],
-            "max_draw_units": 20,
-            "colormap": null,
-            "image_pixels_per_unit": null
-        },
-        "output": {
             "image_maxdim": null,
-            "feature": 0,
             "visible": true,
             "vshape": null,
-            "minmax": [
-                -1.0,
-                1.0
-            ],
-            "max_draw_units": 20,
-            "colormap": null,
-            "image_pixels_per_unit": null
+            "feature": 0
         },
         "hidden": {
-            "image_maxdim": null,
-            "feature": 0,
-            "visible": true,
-            "vshape": null,
+            "colormap": null,
+            "image_pixels_per_unit": null,
+            "max_draw_units": 20,
             "minmax": [
                 -1.0,
                 1.0
             ],
-            "max_draw_units": 20,
+            "image_maxdim": null,
+            "visible": true,
+            "vshape": null,
+            "feature": 0
+        },
+        "maxpool1": {
             "colormap": null,
-            "image_pixels_per_unit": null
+            "image_pixels_per_unit": null,
+            "max_draw_units": 20,
+            "minmax": null,
+            "image_maxdim": null,
+            "visible": true,
+            "vshape": null,
+            "feature": 0
         },
         "flat": {
+            "colormap": null,
+            "image_pixels_per_unit": null,
+            "max_draw_units": 20,
+            "minmax": null,
             "image_maxdim": null,
-            "feature": 0,
             "visible": true,
             "vshape": null,
-            "minmax": null,
-            "max_draw_units": 20,
-            "colormap": null,
-            "image_pixels_per_unit": null
+            "feature": 0
         },
         "maxpool2": {
+            "colormap": null,
+            "image_pixels_per_unit": null,
+            "max_draw_units": 20,
+            "minmax": null,
             "image_maxdim": null,
-            "feature": 0,
             "visible": true,
             "vshape": null,
-            "minmax": null,
+            "feature": 0
+        },
+        "input": {
+            "colormap": "gray",
+            "image_pixels_per_unit": null,
             "max_draw_units": 20,
+            "minmax": null,
+            "image_maxdim": null,
+            "visible": true,
+            "vshape": null,
+            "feature": 0
+        },
+        "conv2D_1": {
             "colormap": null,
-            "image_pixels_per_unit": null
+            "image_pixels_per_unit": null,
+            "max_draw_units": 20,
+            "minmax": [
+                -1.0,
+                1.0
+            ],
+            "image_maxdim": null,
+            "visible": true,
+            "vshape": null,
+            "feature": 0
         }
     },
-    "activation": "linear",
-    "font_size": 12,
-    "border_bottom": 25,
-    "dashboard.features.columns": 8,
-    "show_errors": false,
-    "show_targets": true,
-    "dashboard.dataset": "Test",
-    "dashboard.features.bank": "conv2D_1",
-    "svg_scale": 1.0,
-    "image_maxdim": 200,
-    "font_family": "monospace",
-    "border_color": "black",
-    "border_top": 25,
-    "border_width": "2",
-    "precision": 2,
-    "arrow_color": "black",
-    "vspace": 30,
-    "arrow_width": "2",
     "svg_preferred_size": 400,
-    "svg_max_width": 800,
-    "dashboard.features.scale": 4.0,
+    "dashboard.features.columns": 8,
+    "border_top": 25,
     "pixels_per_unit": 1,
-    "hspace": 150,
     "svg_rotate": true,
-    "image_pixels_per_unit": 50
+    "show_errors": false,
+    "dashboard.features.scale": 4.0,
+    "hspace": 150,
+    "font_family": "monospace",
+    "show_targets": true,
+    "precision": 2,
+    "border_color": "black",
+    "image_maxdim": 200,
+    "arrow_color": "black"
 }
