--- a/work-in-progress/Polka_in_Time.conx/config.json
+++ b/work-in-progress/Polka_in_Time.conx/config.json
@@ -13,7 +13,7 @@
     "border_width": "2",
     "border_color": "black",
     "show_targets": true,
-    "show_errors": false,
+    "show_errors": true,
     "pixels_per_unit": 1,
     "precision": 2,
     "svg_scale": null,
